--- a/test-site/index.html
+++ b/test-site/index.html
@@ -10,11 +10,11 @@
     <div id="main">
     <header><h1>All Us Zombies</h1></header>
     <nav>
-        <a href="rouge.html" target="_blank">Rouge</a>&nbsp;&nbsp;
-        <a href="noir.html" target="_blank">Noir</a>&nbsp;&nbsp;
-        <a href="giallo.html" target="_blank">Giallo</a>&nbsp;&nbsp;
-        <a href="submissions.html" target="_blank">Submissions</a>&nbsp;&nbsp;
-        <a href="about.html" target="_blank">About Us</a>
+        <a href="rouge.html" target="_self">Rouge</a>&nbsp;&nbsp;
+        <a href="noir.html" target="_self">Noir</a>&nbsp;&nbsp;
+        <a href="giallo.html" target="_self">Giallo</a>&nbsp;&nbsp;
+        <a href="submissions.html" target="_self">Submissions</a>&nbsp;&nbsp;
+        <a href="about.html" target="_self">About Us</a>
     </nav>
     <aside>Place<br />for<br />your<br />advertisement</aside>
     <article>
